@@ -15,6 +15,10 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   the CSS file slightly to correct alignment and color issues with the
   timestamps column.
 
+* Project hosting moved from an adhoc solution (custom web site and
+  Monotone repository) to Google Code (standard wiki and Git).  ATF now
+  lives in a subcomponent of the Kyua project.
+
 
 Changes in version 0.15
 ***********************
